# umbra-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
.umbra/: admission.yaml
demos/injection/: demo.py
demos/injection/fixture-repo/: README.md  package.json
demos/injection/fixture-repo/.umbra/: admission.yaml
docs/: INTEGRATIONS.md  LAUNCH.md  ORG_MIGRATION.md  RELEASING.md
docs/site/: concepts.md  github-action.md  index.md  quickstart.md  security.md
integrations/git-hooks/: pre-push
integrations/github-action/: action.yml  example-workflow.yml
tests/: test_accountability.py  test_cli_and_mcp.py  test_executors.py  test_guard.py  test_injection_demo.py  test_pipeline.py  test_security_controls.py
umbra_core/: __init__.py  cli.py  mcp_server.py
umbra_core/executors/: __init__.py  _shared.py  base.py  claude_code.py  codex.py  null.py  registry.py
umbra_core/pipeline/: __init__.py  _helpers.py  admission.py  checks.py  contract.py  guard.py  passport.py  provenance.py  receipt.py  transparency.py  trust_boundary.py  verifier.py
